--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ paginate_path: "page:num"
 
 # highlight
 # 本地用rouge, github上用pygments
-#highlighter: pygments
-highlighter: rouge
+highlighter: pygments
+#highlighter: rouge
 highlighter: true
 #pygments: true
